--- a/testing.tex
+++ b/testing.tex
@@ -94,7 +94,9 @@ the time required to calculate the probability of having a feature in a final pr
 %In this case, the total time to obtain the probability for all the features is linear with respect to the total length of the analyzed term
 %\mncomment{Que quiere decir esto? Suena raro porque yo esperaria complejidad $O(2^n)$ siendo $n$ el numero de probabilidades que salen en el termino. Pero vamos, que yo no  se mucho de complejidad!}\ccomen{Es cierto, no lo demostramos ni lo analizamos}.
 %\acomen{Yo simplemente quitaría esa frase, lo de que la complejidad es lineal}
-It is important to remark that there is a small variation in the processing time for calculating the probability of each single feature. We think that this variation is mainly caused by the inherent noise of the node where the experiment is launched (e.g. disk latencies, operating
+It is important to remark that there is a small variation in the processing time for
+calculating the probability of each single feature. We think that this variation is
+mainly caused by the inherent noise of the node where the experiment is launched (e.g. disk latencies, operating
 system overhead, memory paging, etc.) and, therefore, it is not related to the algorithm itself.
 
 Since the processing time for each feature is relatively low, it being around milliseconds, a single delay in
@@ -104,7 +106,8 @@ from 15 to 28 milliseconds.
 
 The model used in the experiments has been executed 30 times, providing similar results. That is, the
 major part of the features require between 15 and 20 milliseconds to be processed, while there is a small
-portion of them requiring a processing time between 20 and 38 milliseconds.
+portion of them requiring a processing time between 20 and 36 milliseconds.
+The standard deviation of the experiment is 3.0357.
 
 
 \begin{figure}[h]
