--- a/testing.tex
+++ b/testing.tex
@@ -109,6 +109,32 @@ major part of the features require between 15 and 20 milliseconds to be processe
 portion of them requiring a processing time between 20 and 36 milliseconds.
 The standard deviation of the experiment is 3.0357.
 
+For the sake of the article readability we only display the first 10 executions in
+Table~\ref{execution_times}, it displays partially the results to
+show that on each execution the algorithm behaves similarly.
+
+\begin{table}[h]
+	\centering
+	\begin{tabular}{|c|c|c|c|c|}
+		\hline
+		\textbf{Execution} & \textbf{Maximum} &  \textbf{Minimum} &  \textbf{Average} &  \textbf{Standard deviation} \\ \hline
+		\textit{1}		& 14	& 35	& 17.0247	& 3.0357 	\\ \hline
+		\textit{2}		& 14	& 41 	& 17.2325	& 3.3911	\\ \hline
+		\textit{3}		& 14	& 36 	& 16.3983 	& 3.0823 	\\ \hline
+		\textit{4}		& 14	& 34	& 16.5417	& 3.1394 	\\ \hline
+		\textit{5}		& 14	& 34	& 16.7105	& 3.1343 	\\ \hline
+		\textit{6}		& 14	& 43	& 16.7865	& 3.3871 	\\ \hline
+		\textit{7}		& 14	& 47	& 17.3589	& 3.9768 	\\ \hline
+		\textit{8}		& 14	& 63	& 17.6684	& 4.2557 	\\ \hline
+		\textit{9}		& 15	& 51	& 18.5851	& 4.3072 	\\ \hline				
+		\textit{10}		& 14	& 55	& 18.0947	& 4.4526 	\\ \hline			
+	\end{tabular}
+	\caption{Computing time analysis table.}
+	\label{execution_times}
+\end{table}
+
+
+
 
 \begin{figure}[h]
 	\centering
