articulos pendientes related work

--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage{pifont}
 \usepackage{stmaryrd}
 \usepackage{scalerel}
+\usepackage{cite}
 \usepackage[colorinlistoftodos, textsize=tiny, shadow]{todonotes} %
 \def\review{\includegraphics[width=4em]{review.jpg}}
 
