related work parte

--- a/conclussions.tex
+++ b/conclussions.tex
@@ -42,7 +42,8 @@ mechanisms allowing us to simplify and/or optimize terms
 based on the results of the probabilistic analysis. In addition,
 we plan to find practical use cases to show the usefulness of having a probabilistic extension for \SPLs.
 
-
+Also it is interesting the future integration's of our formal framework to existing tooling frameworks
+like ProFeat~\cite{Chrszon2018} and probabilistic model checkers like PRISM~\cite{mgd12}.
 
 %%% Local Variables:
 %%% mode: latex
