--- a/concuPL.bib
+++ b/concuPL.bib
@@ -233,8 +233,7 @@
                   Institute},
   Number =	 {CMU/SEI-2001-TR-022},
   Title =	 {Testing a Software Product Line},
-  Year =	 2001,
-  url =		 {http://www.sei.cmu.edu/reports/01tr022.pdf}
+  Year =	 2001
 }
 
 @inproceedings{msm04,
@@ -1860,3 +1859,53 @@
   isbn =	 "978-3-662-46734-3",
   doi =		 "10.1007/978-3-662-46734-3_5",
 }
+
+
+
+@InProceedings{vk13,
+author = {Varshosaz, Mahsa and Khosravi, Ramtin},
+year = {2013},
+month = {08},
+pages = {34-41},
+title = {Discrete time Markov chain families: Modeling and verification of probabilistic software product lines},
+journal = {ACM International Conference Proceeding Series},
+doi = {10.1145/2499777.2500725}
+}
+
+@inproceedings{jhf11,
+ author = {Johansen, Martin Fagereng and Haugen, \Oystein and Fleurey, Franck},
+ title = {Properties of Realistic Feature Models Make Combinatorial Testing of Product Lines Feasible},
+ booktitle = {Proceedings of the 14th International Conference on Model Driven Engineering Languages and Systems},
+ series = {MODELS'11},
+ year = {2011},
+ isbn = {978-3-642-24484-1},
+ location = {Wellington, New Zealand},
+ pages = {638--652},
+ numpages = {15},
+}  
+
+@inproceedings{jhfes12,
+ author = {Johansen, Martin Fagereng and Haugen, \Oystein and Fleurey, Franck and Eldegard, Anne Grete and Syversen, Torbj{\o}rn},
+ title = {Generating Better Partial Covering Arrays by Modeling Weights on Sub-product Lines},
+ booktitle = {Proceedings of the 15th International Conference on Model Driven Engineering Languages and Systems},
+ series = {MODELS'12},
+ year = {2012},
+ isbn = {978-3-642-33665-2},
+ pages = {269--284},
+ numpages = {16},
+ doi = {10.1007/978-3-642-33666-9_18},
+}
+
+@INPROCEEDINGS{mgd12,
+author={M. Kwiatkowsa and G. Norman and D. Parker},
+booktitle={2012 Ninth International Conference on Quantitative Evaluation of Systems},
+title={The PRISM Benchmark Suite},
+year={2012},
+volume={},
+number={},
+pages={203-204},
+doi={10.1109/QEST.2012.14},
+ISSN={},
+month={Sept},}
+
+
