--- a/introduction.tex
+++ b/introduction.tex
@@ -276,15 +276,15 @@ in comparison with the denotational semantics implementations presented in previ
 The rest of the paper is structured as follows.
 Section \ref{ref:related_work} introduces the related work on probabilistic analysis
 of feature models.
-Section \ref{sec:stat:sintaxMain} presents an introduction to the
-\fodaPA\ syntax and the main operators usage for both the operational and denotational semantics.
+%Section \ref{sec:stat:sintaxMain} presents an introduction to the
+%\fodaPA\ syntax and the main operators usage for both the operational and denotational semantics.
 Section \ref{sec:stat:sintaxMain} presents our probabilistic language \fodaPAp.
 Section \ref{sec:equivalenceMain} is used to prove the equivalence between the operational and denotational semantics.
 In section \ref{sec:stat:hidMain} we extend our language to define how sets of features can be hidden. This new
 hidden operator allows to improve the execution of the probabilistic
 extension execution, as it allows to remove those features that are not required to calculate the probability.
 Section~\ref{sec:stat:impl} presents an empirical study that has been carried out by using our implementation of the denotational semantics for the probabilistic extension.
-Finally, section~\ref{section:jstat:concs} presents our conclusions and some lnes of future work.
+Finally, section~\ref{section:jstat:concs} presents our conclusions and some research lines for the upcoming work.
 
 
 %%% Local Variables:
