--- a/denotational.tex
+++ b/denotational.tex
@@ -54,7 +54,7 @@ and to obtain a single product with probability~$1$.
 
 \bdfn\label{def:semantic:operators}
   Let $M,M_1,M_2\in\calM$, $\fA,\fB\in\calF$ and $p\in(0,1]$. For any operator appearing in
-  Definition~\ref{sec:stat:sintax} we define its denotational operator
+  Definition~\ref{dfn:syntax} we define its denotational operator
   as follows:
   \begin{itemize}
 
