--- a/macros.tex
+++ b/macros.tex
@@ -83,8 +83,9 @@
 \newcommand{\si}{\ \mathrm{if}\ }
 
 \newcommand{\letbar}[1]{\mbox{I\kern-0.23em#1}}
-\newcommand{\nat}{\letbar N}
-\newcommand{\real}{\letbar R}
+%\newcommand{\nat}{\letbar N}
+%\newcommand{\real}{\letbar R}
+\newcommand{\real}{\mathbb{R}}
 \newcommand{\realm}{\letbar R_+^m}
 \newcommand{\Bool}{\texttt{Bool}}
 %
